# decruft

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  release.yml
bench/: data.js
benches/: extraction.rs
scripts/: release.sh
src/: callouts.rs  cleanup.rs  code_blocks.rs  content.rs  decruft.rs  dom.rs  footnotes.rs  http.rs  lib.rs  main.rs  math.rs  metadata.rs  metadata_block.rs  noscript.rs  patterns.rs  schema_org.rs  scorer.rs  selectors.rs  standardize.rs  streaming_ssr.rs  types.rs
src/extractors/: bbcode.rs  c2wiki.rs  comments.rs  conversations.rs  github.rs  hackernews.rs  lobsters.rs  mod.rs  reddit.rs  stackoverflow.rs  substack.rs  twitter.rs
tests/: behavior.rs  cli.rs  compare_sites.sh  defuddle_behavior.rs  defuddle_fixtures.rs  extraction.rs  formats.rs  golden.rs  integration.rs  markdown.rs  markdown_quality.rs  mozilla_suite.rs  oracle.rs  output_formats.rs  regression.rs
tests/expected/golden-markdown/: author-contact-block.md  author-share-widget.md  callouts--obsidian-publish-callouts.md  code-blocks--chroma-linenums.md  code-blocks--hexo-br.md  codeblocks--chatgpt-codemirror.md  codeblocks--chroma-inline-linenums.md  codeblocks--chroma-line-spans.md  codeblocks--code-pre-nesting.md  codeblocks--flex-row-gutter.md  codeblocks--mintlify.md  codeblocks--pygments-lineno.md  codeblocks--react-syntax-highlighter-linenums.md  codeblocks--rehype-pretty-code.md  codeblocks--rehype-pretty-copy.md  codeblocks--rockthejvm.com-articles-kotlin-101-type-classes.md  codeblocks--rouge-linenums.md  codeblocks--stripe.md  comments--news.ycombinator.com-item-id=12345678.md  comments--old.reddit.com-r-test-comments-abc123-test_post.md  complex_blog.md  content-patterns--card-grid-stripped-headings.md  content-patterns--code-block-boilerplate-and-trailing-section.md  content-patterns--heading-introduced-list.md  content-patterns--iso-date-and-read-time.md  (+245 more)
tests/fixtures/: complex_blog.html  general--askubuntu.com-question.html  general--lobste.rs-story.html  general--rpg.stackexchange.com-question.html  general--serverfault.com-question.html  general--stackoverflow.com-question.html  general--superuser.com-question.html  general--wiki.c2.com-page.html  general--x.com-article-2026-02-13.html  news_article.html  paulgraham.html  rust_blog.html  wikipedia.html  wikipedia_bengaluru.html
(+728 files in other folders)
