[package]
name = "decruft"
version = "0.1.0"
edition = "2024"
description = "Extract clean, readable content from web pages"
license = "MIT"
repository = "https://github.com/jamtur01/decruft"
homepage = "https://github.com/jamtur01/decruft"
documentation = "https://docs.rs/decruft"
readme = "README.md"
keywords = ["html", "content-extraction", "readability", "scraping", "web"]
categories = ["command-line-utilities", "parser-implementations", "web-programming"]

[lib]
name = "decruft"
path = "src/lib.rs"

[[bin]]
name = "decruft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ego-tree = "0.11.0"
fancy-regex = "0.17.0"
html5ever = "0.39.0"
htmd = "0.5.4"
markup5ever = "0.39.0"
regex = "1.12.3"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3.3.0"
url = "2.5.8"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
allow_attributes = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
