[package]
name = "decruft"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Extract clean, readable content from web pages"
license = "MIT"
repository = "https://github.com/jamtur01/decruft"
homepage = "https://github.com/jamtur01/decruft"
documentation = "https://docs.rs/decruft"
readme = "README.md"
keywords = ["html", "content-extraction", "readability", "scraping", "web"]
categories = ["command-line-utilities", "parser-implementations", "web-programming"]
exclude = ["tests/fixtures", "tests/expected", "tools/"]

[lib]
name = "decruft"
path = "src/lib.rs"

[[bin]]
name = "decruft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ego-tree = "0.11.0"
fancy-regex = "0.17.0"
htmd = "0.5.4"
markup5ever = "0.39.0"
pulldown-cmark = "0.13.3"
regex = "1.12.3"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3.3.0"
url = "2.5.8"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"

[dev-dependencies]
regex-lite = "0.1"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "extraction"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
